--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="UTS Pemrograman Web II - IF4A - NUR RACHMAT 2009250066"
+APP_NAME="<MATAKULIAH> - <KELAS> - <NAMA> <NPM>"
 APP_ENV=local
 APP_KEY=base64:8LE8gOBcawVvUmDKEghn3LjGVNByuPLUg+L+yzJS4KE=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=db_utsif4a
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
